--- a/pages/15805.html
+++ b/pages/15805.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -921,19 +921,23 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/Roberto+Peccei'>Roberto Peccei</a>, <em>The Strong CP Problem and Axions</em>, Lect. Notes Phys.741:3-17,2008 (<a href='http://arxiv.org/abs/hep-ph/0607268'>arXiv:hep-ph/0607268</a>)</p>
+</li>
+
+<li>
+<p><em>Strong CP problem and axion Phenomenology</em>, Proceedings of the DAE Symp. on Nucl. Phys. 58 (2013) (<a href='http://sympnp.org/proceedings/58/F14.pdf'>pdf</a>)</p>
+</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li>
 <p>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Strong_CP_problem'>Strong CP problem</a></em></p>
 </li>
 
 <li>
 <p>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/CP_violation'>CP violation</a></em></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Roberto+Peccei'>Roberto Peccei</a>, <em>The Strong CP Problem and Axions</em>, Lect.Notes Phys.741:3-17,2008 (<a href='http://arxiv.org/abs/hep-ph/0607268'>arXiv:hep-ph/0607268</a>)</p>
-</li>
-
-<li>
-<p><em>Strong CP problem and axion Phenomenology</em>, Proceedings of the DAE Symp. on Nucl. Phys. 58 (2013) (<a href='http://sympnp.org/proceedings/58/F14.pdf'>pdf</a>)</p>
 </li>
 </ul>
 
@@ -957,14 +961,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 16, 2017 15:16:22 
+  Revised on February 11, 2018 15:04:22 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (194.210.225.146)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/CP+violation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/CP+violation/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/CP+violation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/CP+violation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/CP+violation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/CP+violation/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/CP+violation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/CP+violation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
