--- a/pages/18602.html
+++ b/pages/18602.html
@@ -1393,12 +1393,12 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#contributions'>Contributions</a><ul><li><a href='#qed_contributions'>QED contributions</a></li><li><a href='#QuantumGravityCorrection'>Quantum gravity contributions</a></li><li><a href='#axion_contributions'>Axion contributions</a></li></ul></li><li><a href='#references'>References</a><ul><li><a href='#qed_contributions_2'>QED contributions</a></li><li><a href='#gravity_contributions'>Gravity contributions</a></li><li><a href='#axion_contributions_2'>Axion contributions</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#contributions'>Contributions</a><ul><li><a href='#qed_contributions'>QED contributions</a></li><li><a href='#QuantumGravityCorrection'>Quantum gravity contributions</a></li><li><a href='#axion_contributions'>Axion contributions</a></li></ul></li><li><a href='#references'>References</a><ul><li><a href='#qed_contributions_2'>QED contributions</a></li><li><a href='#gravity_contributions'>Gravity contributions</a></li><li><a href='#ReferencesAxionContributions'>Axion contributions</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, the <a class='existingWikiWord' href='/nlab/show/magnetic+dipole+moment'>magnetic moment</a> of <a class='existingWikiWord' href='/nlab/show/particle'>particles</a> as predicted by <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a> may receive corrections due to <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum effects</a>. Such corrections are also called <em><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomalies</a></em>, and hence one speaks of the <em>anomalous magnetic moments</em>, traditionally denoted by “<math class='maruku-mathml' display='inline' id='mathml_58e20110545befa7629660f4183ad7fe61ac8a79_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>−</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>g-2</annotation></semantics></math>”.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, the <a class='existingWikiWord' href='/nlab/show/magnetic+dipole+moment'>magnetic moment</a> of <a class='existingWikiWord' href='/nlab/show/particle'>particles</a> as predicted by <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a> may receive corrections due to <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum effects</a>. Such corrections are also called <em><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomalies</a></em>, and hence one speaks of the <em>anomalous magnetic moments</em>, traditionally denoted by “<math class='maruku-mathml' display='inline' id='mathml_4a413d3290768fe74b60b25c40b734c2faaee161_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>−</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>g-2</annotation></semantics></math>”.</p>
 
-<p>The archetypical example is the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>, which is famous as the <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>pQFT</a>-prediction that matches <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> to an accuracy of about <math class='maruku-mathml' display='inline' id='mathml_58e20110545befa7629660f4183ad7fe61ac8a79_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>12</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>10^{-12}</annotation></semantics></math> (e.g.<a href='#Scharf95'>Scharf 95, (3.10.20)</a>).</p>
+<p>The archetypical example is the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>, which is famous as the <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>pQFT</a>-prediction that matches <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> to an accuracy of about <math class='maruku-mathml' display='inline' id='mathml_4a413d3290768fe74b60b25c40b734c2faaee161_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>12</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>10^{-12}</annotation></semantics></math> (e.g.<a href='#Scharf95'>Scharf 95, (3.10.20)</a>).</p>
 
 <p>Similarly there is the anomalous magenetic moment of the <a class='existingWikiWord' href='/nlab/show/muon'>muon</a> and the other <a class='existingWikiWord' href='/nlab/show/lepton'>leptons</a>.</p>
 
@@ -1416,12 +1416,22 @@ margin-left: 0em;
 
 <h3 id='axion_contributions'>Axion contributions</h3>
 
-<p>Possible contributions to and xconstraints on <math class='maruku-mathml' display='inline' id='mathml_58e20110545befa7629660f4183ad7fe61ac8a79_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>g</mi> <mi>lep</mi></msub><mo>−</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>g_{lep}-2</annotation></semantics></math> from hypothetical <a class='existingWikiWord' href='/nlab/show/axion'>axions</a> are discussed in <a href='#MMPP16'>MMPP 16</a>, <a href='#BNT17'>BNT 17</a>…</p>
+<p>Possible contributions to and xconstraints on <math class='maruku-mathml' display='inline' id='mathml_4a413d3290768fe74b60b25c40b734c2faaee161_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>g</mi> <mi>lep</mi></msub><mo>−</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>g_{lep}-2</annotation></semantics></math> from hypothetical <a class='existingWikiWord' href='/nlab/show/axion'>axions</a> are discussed in <a href='#ACGM08'>ACGM 08</a>, <a href='#MMPP16'>MMPP 16</a>, <a href='#BNT17'>BNT 17</a>…</p>
 
 <h2 id='references'>References</h2>
 
 <ul>
-<li id='Steinmann02'><a class='existingWikiWord' href='/nlab/show/Othmar+Steinmann'>Othmar Steinmann</a>, <em>What is the Magnetic Moment of the Electron?</em>, Commun.Math.Phys. 237 (2003) 181-201 (<a href='https://arxiv.org/abs/hep-ph/0211187'>arXiv:hep-ph/0211187</a>)</li>
+<li id='Steinmann02'>
+<p><a class='existingWikiWord' href='/nlab/show/Othmar+Steinmann'>Othmar Steinmann</a>, <em>What is the Magnetic Moment of the Electron?</em>, Commun.Math.Phys. 237 (2003) 181-201 (<a href='https://arxiv.org/abs/hep-ph/0211187'>arXiv:hep-ph/0211187</a>)</p>
+</li>
+
+<li>
+<p>Kirill Melnikov, Arkady Vainshtein, <em>Theory of the Muon Anomalous Magnetic Moment</em>, Springer Tracts in Modern Physics 216, 2006</p>
+</li>
+
+<li>
+<p>Friedrich Jegerlehner, Friedrich Jegerlehner, <em>The Anomalous Magnetic Moment of the Muon</em>, Springer Tracts in Modern Physics 226, Springer-Verlag Berlin Heidelberg, 2008</p>
+</li>
 </ul>
 
 <p>See also</p>
@@ -1449,16 +1459,20 @@ margin-left: 0em;
 <p>This discussion is adapted to <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> in</p>
 
 <ul>
-<li>F. del Aguila, A. Culatti, R. Munoz-Tapia, M. Perez-Victoria, <em>Supergravity corrections to <math class='maruku-mathml' display='inline' id='mathml_58e20110545befa7629660f4183ad7fe61ac8a79_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>−</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>l</mi></msub></mrow><annotation encoding='application/x-tex'>(g-2)_l</annotation></semantics></math> in differential renormalization</em>, Nuclear Physics B 504 (1997) 532-550 (<a href='https://arxiv.org/abs/hep-ph/9702342'>arXiv:hep-ph/9702342</a>)</li>
+<li>F. del Aguila, A. Culatti, R. Munoz-Tapia, M. Perez-Victoria, <em>Supergravity corrections to <math class='maruku-mathml' display='inline' id='mathml_4a413d3290768fe74b60b25c40b734c2faaee161_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>−</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>l</mi></msub></mrow><annotation encoding='application/x-tex'>(g-2)_l</annotation></semantics></math> in differential renormalization</em>, Nuclear Physics B 504 (1997) 532-550 (<a href='https://arxiv.org/abs/hep-ph/9702342'>arXiv:hep-ph/9702342</a>)</li>
 </ul>
 
-<h3 id='axion_contributions_2'>Axion contributions</h3>
+<h3 id='ReferencesAxionContributions'>Axion contributions</h3>
 
 <p>Contribution of hypothetical <a class='existingWikiWord' href='/nlab/show/axion'>axions</a> to the <a class='existingWikiWord' href='/nlab/show/anomalous+magnetic+moment'>anomalous magnetic moment</a> of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> and <a class='existingWikiWord' href='/nlab/show/muon'>muon</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>QED</a>:</p>
 
 <ul>
 <li>
-<p>Yannis Semertzidis, <em>Magnetic and Electric Dipole Moments in Storage Rings</em>, chapter 6 of Markus Kuster, Georg Raffelt, Berta Beltrán (eds.), <em>Axions: Theory, cosmology, and Experimental Searches</em>, Lect. Notes Phys. 741 (Springer, Berlin Heidelberg 2008) (Kuster-Raffelt-Beltran 08ref=“https://doi.org/10.1007/978-3-540-73518-2_2”&gt;doi:10.1007/978-3-540-73518-2_2&lt;/a&gt;)</p>
+<p>Yannis Semertzidis, <em>Magnetic and Electric Dipole Moments in Storage Rings</em>, chapter 6 of Markus Kuster, Georg Raffelt, Berta Beltrán (eds.), <em>Axions: Theory, cosmology, and Experimental Searches</em>, Lect. Notes Phys. 741 (Springer, Berlin Heidelberg 2008) (<a href='https://doi.org/10.1007/978-3-540-73518-2_2'>doi:10.1007/978-3-540-73518-2_2</a>)</p>
+</li>
+
+<li id='ACGM08'>
+<p>Roberta Armillis, Claudio Coriano, Marco Guzzi, Simone Morelli, <em>Axions and Anomaly-Mediated Interactions: The Green-Schwarz and Wess-Zumino Vertices at Higher Orders and g-2 of the muon</em>, JHEP 0810:034,2008 (<a href='https://arxiv.org/abs/0808.1882'>arXiv:0808.1882</a>)</p>
 </li>
 
 <li id='MMPP16'>
@@ -1466,7 +1480,7 @@ margin-left: 0em;
 </li>
 
 <li id='BNT17'>
-<p>Martin Bauer, Matthias Neubert, Andrea Thamm, <em>Collider Probes of Axion-Like Particles</em>, J. High Energ. Phys. (2017) 2017: 44. (<a href='https://arxiv.org/abs/1708.00443'>arXiv:1708.00443</a>,<a href='https://doi.org/10.1007/JHEP12(2017'>doi:10.1007/JHEP12(2017)044</a>044))</p>
+<p>Martin Bauer, Matthias Neubert, Andrea Thamm, <em>Collider Probes of Axion-Like Particles</em>, J. High Energ. Phys. (2017) 2017: 44. (<a href='https://arxiv.org/abs/1708.00443'>arXiv:1708.00443</a>, <a href='https://doi.org/10.1007/JHEP12(2017)044'>doi:10.1007/JHEP12(2017)044</a>)</p>
 </li>
 </ul>
 
@@ -1492,7 +1506,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 11, 2018 14:59:58 
+  Revised on February 11, 2018 15:19:57 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
