--- a/pages/16195.html
+++ b/pages/16195.html
@@ -1092,19 +1092,19 @@ margin-left: 0em;
 
 <h2 id='definition_2'>Definition</h2>
 
-<p>Two important <a class='existingWikiWord' href='/nlab/show/physical+unit'>physical units</a> of <a class='existingWikiWord' href='/nlab/show/length'>length</a> induced by a <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> <math class='maruku-mathml' display='inline' id='mathml_b24787508336b2c6c1549ea3aef6551e21bd4d18_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math> are</p>
+<p>Two important <a class='existingWikiWord' href='/nlab/show/physical+unit'>physical units</a> of <a class='existingWikiWord' href='/nlab/show/length'>length</a> induced by a <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> <math class='maruku-mathml' display='inline' id='mathml_88199a0201a128c81ce7ec1928b070af62c3ba09_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math> are</p>
 
 <ol>
 <li>
 <p>the <a class='existingWikiWord' href='/nlab/show/Compton+wavelength'>Compton wavelength</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b24787508336b2c6c1549ea3aef6551e21bd4d18_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mi>m</mi></msub><mo>≔</mo><mfrac><mrow><mn>2</mn><mi>π</mi><mi>ℏ</mi></mrow><mrow><mi>m</mi><mi>c</mi></mrow></mfrac></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_88199a0201a128c81ce7ec1928b070af62c3ba09_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mi>m</mi></msub><mo>≔</mo><mfrac><mrow><mn>2</mn><mi>π</mi><mi>ℏ</mi></mrow><mrow><mi>m</mi><mi>c</mi></mrow></mfrac></mrow><annotation encoding='application/x-tex'>
   \ell_m \coloneqq \frac{2 \pi \hbar}{m c}
 
 </annotation></semantics></math></div></li>
 
 <li>
 <p>the <em><a class='existingWikiWord' href='/nlab/show/Schwarzschild+radius'>Schwarzschild radius</a></em></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b24787508336b2c6c1549ea3aef6551e21bd4d18_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>r</mi> <mi>m</mi></msub><mo>≔</mo><mn>2</mn><mi>m</mi><mi>G</mi><mo stretchy='false'>/</mo><msup><mi>c</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_88199a0201a128c81ce7ec1928b070af62c3ba09_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>r</mi> <mi>m</mi></msub><mo>≔</mo><mn>2</mn><mi>m</mi><mi>G</mi><mo stretchy='false'>/</mo><msup><mi>c</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>
   r_m \coloneqq 2 m G/c^2
 
 </annotation></semantics></math></div></li>
@@ -1114,20 +1114,20 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_b24787508336b2c6c1549ea3aef6551e21bd4d18_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi></mrow><annotation encoding='application/x-tex'>c</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/speed+of+light'>speed of light</a>;</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_88199a0201a128c81ce7ec1928b070af62c3ba09_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi></mrow><annotation encoding='application/x-tex'>c</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/speed+of+light'>speed of light</a>;</p>
 </li>
 
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_b24787508336b2c6c1549ea3aef6551e21bd4d18_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℏ</mi></mrow><annotation encoding='application/x-tex'>\hbar</annotation></semantics></math> is <a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a>;</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_88199a0201a128c81ce7ec1928b070af62c3ba09_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℏ</mi></mrow><annotation encoding='application/x-tex'>\hbar</annotation></semantics></math> is <a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a>;</p>
 </li>
 
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_b24787508336b2c6c1549ea3aef6551e21bd4d18_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/gravitational+constant'>gravitational constant</a>;</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_88199a0201a128c81ce7ec1928b070af62c3ba09_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/gravitational+constant'>gravitational constant</a>;</p>
 </li>
 </ul>
 
 <p>Solving the <a class='existingWikiWord' href='/nlab/show/equation'>equation</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b24787508336b2c6c1549ea3aef6551e21bd4d18_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd><msub><mi>ℓ</mi> <mi>m</mi></msub></mtd> <mtd><mo>=</mo></mtd> <mtd><msub><mi>r</mi> <mi>m</mi></msub></mtd></mtr> <mtr><mtd><mo>⇔</mo></mtd> <mtd><mn>2</mn><mi>π</mi><mi>ℏ</mi><mo stretchy='false'>/</mo><mi>m</mi><mi>c</mi></mtd> <mtd><mo>=</mo></mtd> <mtd><mn>2</mn><mi>m</mi><mi>G</mi><mo stretchy='false'>/</mo><msup><mi>c</mi> <mn>2</mn></msup></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_88199a0201a128c81ce7ec1928b070af62c3ba09_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd><msub><mi>ℓ</mi> <mi>m</mi></msub></mtd> <mtd><mo>=</mo></mtd> <mtd><msub><mi>r</mi> <mi>m</mi></msub></mtd></mtr> <mtr><mtd><mo>⇔</mo></mtd> <mtd><mn>2</mn><mi>π</mi><mi>ℏ</mi><mo stretchy='false'>/</mo><mi>m</mi><mi>c</mi></mtd> <mtd><mo>=</mo></mtd> <mtd><mn>2</mn><mi>m</mi><mi>G</mi><mo stretchy='false'>/</mo><msup><mi>c</mi> <mn>2</mn></msup></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \array{
     &amp; \ell_m &amp;=&amp; r_m
     \\
@@ -1135,14 +1135,14 @@ margin-left: 0em;
   }
 
 </annotation></semantics></math></div>
-<p>for <math class='maruku-mathml' display='inline' id='mathml_b24787508336b2c6c1549ea3aef6551e21bd4d18_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math> yields the <em><a class='existingWikiWord' href='/nlab/show/Planck+mass'>Planck mass</a></em></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b24787508336b2c6c1549ea3aef6551e21bd4d18_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>m</mi> <mi>P</mi></msub><mo>≔</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><msqrt><mi>π</mi></msqrt></mfrac></mstyle><msub><mi>m</mi> <mrow><mi>ℓ</mi><mo>=</mo><mi>r</mi></mrow></msub><mo>=</mo><msqrt><mfrac><mrow><mi>ℏ</mi><mi>c</mi></mrow><mi>G</mi></mfrac></msqrt><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>for <math class='maruku-mathml' display='inline' id='mathml_88199a0201a128c81ce7ec1928b070af62c3ba09_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math> yields the <em><a class='existingWikiWord' href='/nlab/show/Planck+mass'>Planck mass</a></em></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_88199a0201a128c81ce7ec1928b070af62c3ba09_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>m</mi> <mi>P</mi></msub><mo>≔</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><msqrt><mi>π</mi></msqrt></mfrac></mstyle><msub><mi>m</mi> <mrow><mi>ℓ</mi><mo>=</mo><mi>r</mi></mrow></msub><mo>=</mo><msqrt><mfrac><mrow><mi>ℏ</mi><mi>c</mi></mrow><mi>G</mi></mfrac></msqrt><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
    m_{P} \coloneqq \tfrac{1}{\sqrt{\pi}} m_{\ell = r} = \sqrt{\frac{\hbar c}{G}}
   \,.
 
 </annotation></semantics></math></div>
-<p>The corresponding <a class='existingWikiWord' href='/nlab/show/Compton+wavelength'>Compton wavelength</a> <math class='maruku-mathml' display='inline' id='mathml_b24787508336b2c6c1549ea3aef6551e21bd4d18_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mrow><msub><mi>m</mi> <mi>P</mi></msub></mrow></msub></mrow><annotation encoding='application/x-tex'>\ell_{m_{P}}</annotation></semantics></math> is given by the <em><a class='existingWikiWord' href='/nlab/show/Planck+length'>Planck length</a></em> <math class='maruku-mathml' display='inline' id='mathml_b24787508336b2c6c1549ea3aef6551e21bd4d18_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mi>P</mi></msub></mrow><annotation encoding='application/x-tex'>\ell_P</annotation></semantics></math></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b24787508336b2c6c1549ea3aef6551e21bd4d18_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mi>P</mi></msub><mo>≔</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><mrow><mn>2</mn><mi>π</mi></mrow></mfrac></mstyle><msub><mi>ℓ</mi> <mrow><msub><mi>m</mi> <mi>P</mi></msub></mrow></msub><mo>=</mo><msqrt><mfrac><mrow><mi>ℏ</mi><mi>G</mi></mrow><mrow><msup><mi>c</mi> <mn>3</mn></msup></mrow></mfrac></msqrt><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>
+<p>The corresponding <a class='existingWikiWord' href='/nlab/show/Compton+wavelength'>Compton wavelength</a> <math class='maruku-mathml' display='inline' id='mathml_88199a0201a128c81ce7ec1928b070af62c3ba09_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mrow><msub><mi>m</mi> <mi>P</mi></msub></mrow></msub></mrow><annotation encoding='application/x-tex'>\ell_{m_{P}}</annotation></semantics></math> is given by the <em><a class='existingWikiWord' href='/nlab/show/Planck+length'>Planck length</a></em> <math class='maruku-mathml' display='inline' id='mathml_88199a0201a128c81ce7ec1928b070af62c3ba09_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mi>P</mi></msub></mrow><annotation encoding='application/x-tex'>\ell_P</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_88199a0201a128c81ce7ec1928b070af62c3ba09_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℓ</mi> <mi>P</mi></msub><mo>≔</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><mrow><mn>2</mn><mi>π</mi></mrow></mfrac></mstyle><msub><mi>ℓ</mi> <mrow><msub><mi>m</mi> <mi>P</mi></msub></mrow></msub><mo>=</mo><msqrt><mfrac><mrow><mi>ℏ</mi><mi>G</mi></mrow><mrow><msup><mi>c</mi> <mn>3</mn></msup></mrow></mfrac></msqrt><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>
   \ell_{P} \coloneqq \tfrac{1}{2\pi} \ell_{m_P} = \sqrt{ \frac{\hbar G}{c^3} }
   \,
 
@@ -1162,6 +1162,12 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <ul>
+<li id='Planck99'><a class='existingWikiWord' href='/nlab/show/Max+Planck'>Max Planck</a>, <em>Über irreversible Strahlungsvorgänge</em>, Sitzungsberichte der Königlich Preußischen Akademie der Wissenschaften zu Berlin. 5: 440–480. pp. 478–80, 1899, (<a href='http://onlinelibrary.wiley.com/doi/10.1002/andp.19003060105/abstract'>10.1002/andp.19003060105</a>)</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
 <li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Planck_length'>Planck length</a></em></li>
 </ul>
 
@@ -1170,14 +1176,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  9, 2017 05:26:08 
+  Revised on February 12, 2018 10:59:08 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (88.64.51.223)
+  (195.229.110.3)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Planck+length" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Planck+length/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Planck+length" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Planck+length" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Planck+length" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Planck+length/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Planck+length" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Planck+length" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
