--- a/pages/18993.html
+++ b/pages/18993.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      lattice (in a vector space, etc.) in nLab
+      lattice (discrete subgroup) in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      lattice (in a vector space, etc.)
+      lattice (discrete subgroup)
   </h1>
 
 
@@ -309,6 +309,7 @@ margin-left: 0em;
 
 <div id="revision">
     <p>
+ 
 </p>
 
 <p>&gt; This entry is about the notion of <em>lattice</em> in <a class='existingWikiWord' href='/nlab/show/group+theory'>group theory</a>/<a class='existingWikiWord' href='/nlab/show/quadratic+form'>quadratic form</a>-theory. For other notions see at <em><a class='existingWikiWord' href='/nlab/show/lattice+%28disambiguation%29'>lattice (disambiguation)</a></em>.</p>
@@ -317,23 +318,23 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Classically, a <em>lattice in the <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a></em> <math class='maruku-mathml' display='inline' id='mathml_c8d0c3f251427faf7af99d98b5dfc6e5796b96a2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/discrete+group'>discrete</a> <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> (of the underlying <a class='existingWikiWord' href='/nlab/show/topological+group'>topological</a> <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian group</a>) that <a class='existingWikiWord' href='/nlab/show/span'>spans</a> <math class='maruku-mathml' display='inline' id='mathml_c8d0c3f251427faf7af99d98b5dfc6e5796b96a2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> as a vector space over <math class='maruku-mathml' display='inline' id='mathml_c8d0c3f251427faf7af99d98b5dfc6e5796b96a2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}</annotation></semantics></math>. This may be generalized, from <math class='maruku-mathml' display='inline' id='mathml_c8d0c3f251427faf7af99d98b5dfc6e5796b96a2_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> to a general locally compact abelian group.</p>
+<p>Classically, a <em>lattice in the <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a></em> <math class='maruku-mathml' display='inline' id='mathml_cb7197cb80a73c7d433b3203a913988bfbe1615d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/discrete+group'>discrete</a> <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> (of the underlying <a class='existingWikiWord' href='/nlab/show/topological+group'>topological</a> <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian group</a>) that <a class='existingWikiWord' href='/nlab/show/span'>spans</a> <math class='maruku-mathml' display='inline' id='mathml_cb7197cb80a73c7d433b3203a913988bfbe1615d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> as a vector space over <math class='maruku-mathml' display='inline' id='mathml_cb7197cb80a73c7d433b3203a913988bfbe1615d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}</annotation></semantics></math>. This may be generalized, from <math class='maruku-mathml' display='inline' id='mathml_cb7197cb80a73c7d433b3203a913988bfbe1615d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> to a general locally compact abelian group.</p>
 
 <h2 id='definition'>Definition</h2>
 
-<p>A <em>lattice</em> in a <a class='existingWikiWord' href='/nlab/show/locally+compact+topological+space'>locally compact</a> <a class='existingWikiWord' href='/nlab/show/Hausdorff+space'>Hausdorff</a> <a class='existingWikiWord' href='/nlab/show/topological+abelian+group'>abelian group</a> <math class='maruku-mathml' display='inline' id='mathml_c8d0c3f251427faf7af99d98b5dfc6e5796b96a2_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> is a subgroup <math class='maruku-mathml' display='inline' id='mathml_c8d0c3f251427faf7af99d98b5dfc6e5796b96a2_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo>↪</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>L \hookrightarrow A</annotation></semantics></math> that is <a class='existingWikiWord' href='/nlab/show/discrete+object'>discrete</a> and <em>cocompact</em>, meaning that the quotient group <math class='maruku-mathml' display='inline' id='mathml_c8d0c3f251427faf7af99d98b5dfc6e5796b96a2_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo stretchy='false'>/</mo><mi>L</mi></mrow><annotation encoding='application/x-tex'>A/L</annotation></semantics></math> with the quotient topology is <a class='existingWikiWord' href='/nlab/show/compact+space'>compact</a>.</p>
+<p>A <em>lattice</em> in a <a class='existingWikiWord' href='/nlab/show/locally+compact+topological+space'>locally compact</a> <a class='existingWikiWord' href='/nlab/show/Hausdorff+space'>Hausdorff</a> <a class='existingWikiWord' href='/nlab/show/topological+abelian+group'>abelian group</a> <math class='maruku-mathml' display='inline' id='mathml_cb7197cb80a73c7d433b3203a913988bfbe1615d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> is a subgroup <math class='maruku-mathml' display='inline' id='mathml_cb7197cb80a73c7d433b3203a913988bfbe1615d_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo>↪</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>L \hookrightarrow A</annotation></semantics></math> that is <a class='existingWikiWord' href='/nlab/show/discrete+object'>discrete</a> and <em>cocompact</em>, meaning that the quotient group <math class='maruku-mathml' display='inline' id='mathml_cb7197cb80a73c7d433b3203a913988bfbe1615d_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo stretchy='false'>/</mo><mi>L</mi></mrow><annotation encoding='application/x-tex'>A/L</annotation></semantics></math> with the quotient topology is <a class='existingWikiWord' href='/nlab/show/compact+space'>compact</a>.</p>
 
-<p>Applying <a class='existingWikiWord' href='/nlab/show/Pontryagin+duality'>Pontryagin duality</a>, the dual of the quotient map <math class='maruku-mathml' display='inline' id='mathml_c8d0c3f251427faf7af99d98b5dfc6e5796b96a2_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi><mo>:</mo><mi>A</mi><mo>→</mo><mi>A</mi><mo stretchy='false'>/</mo><mi>L</mi></mrow><annotation encoding='application/x-tex'>q: A \to A/L</annotation></semantics></math> is in that case a discrete subgroup <math class='maruku-mathml' display='inline' id='mathml_c8d0c3f251427faf7af99d98b5dfc6e5796b96a2_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mrow><mi>A</mi><mo stretchy='false'>/</mo><mi>L</mi></mrow><mo>^</mo></mover><mo>↪</mo><mover><mi>A</mi><mo>^</mo></mover></mrow><annotation encoding='application/x-tex'>\widehat{A/L} \hookrightarrow \widehat{A}</annotation></semantics></math> which is also cocompact (its <a class='existingWikiWord' href='/nlab/show/cokernel'>cokernel</a> being the compact group <math class='maruku-mathml' display='inline' id='mathml_c8d0c3f251427faf7af99d98b5dfc6e5796b96a2_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>L</mi><mo>^</mo></mover></mrow><annotation encoding='application/x-tex'>\widehat{L}</annotation></semantics></math>). This is called the <em>dual lattice</em>of <math class='maruku-mathml' display='inline' id='mathml_c8d0c3f251427faf7af99d98b5dfc6e5796b96a2_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi></mrow><annotation encoding='application/x-tex'>L</annotation></semantics></math>.</p>
+<p>Applying <a class='existingWikiWord' href='/nlab/show/Pontryagin+duality'>Pontryagin duality</a>, the dual of the quotient map <math class='maruku-mathml' display='inline' id='mathml_cb7197cb80a73c7d433b3203a913988bfbe1615d_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi><mo>:</mo><mi>A</mi><mo>→</mo><mi>A</mi><mo stretchy='false'>/</mo><mi>L</mi></mrow><annotation encoding='application/x-tex'>q: A \to A/L</annotation></semantics></math> is in that case a discrete subgroup <math class='maruku-mathml' display='inline' id='mathml_cb7197cb80a73c7d433b3203a913988bfbe1615d_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mrow><mi>A</mi><mo stretchy='false'>/</mo><mi>L</mi></mrow><mo>^</mo></mover><mo>↪</mo><mover><mi>A</mi><mo>^</mo></mover></mrow><annotation encoding='application/x-tex'>\widehat{A/L} \hookrightarrow \widehat{A}</annotation></semantics></math> that is also cocompact (its <a class='existingWikiWord' href='/nlab/show/cokernel'>cokernel</a> being the compact group <math class='maruku-mathml' display='inline' id='mathml_cb7197cb80a73c7d433b3203a913988bfbe1615d_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>L</mi><mo>^</mo></mover></mrow><annotation encoding='application/x-tex'>\widehat{L}</annotation></semantics></math>). This is called the <em>dual lattice</em> of <math class='maruku-mathml' display='inline' id='mathml_cb7197cb80a73c7d433b3203a913988bfbe1615d_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi></mrow><annotation encoding='application/x-tex'>L</annotation></semantics></math>.</p>
 
 <h2 id='examples'>Examples</h2>
 
-<p>Notable examples of classical lattices (in <math class='maruku-mathml' display='inline' id='mathml_c8d0c3f251427faf7af99d98b5dfc6e5796b96a2_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> include</p>
+<p>Notable examples of classical lattices (in <math class='maruku-mathml' display='inline' id='mathml_cb7197cb80a73c7d433b3203a913988bfbe1615d_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> include</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Leech+lattice'>Leech lattice</a>, <span class='newWikiWord'>E8 lattice<a href='/nlab/new/E8+lattice'>?</a></span></li>
 </ul>
 
-<p>The standard diagonal inclusion of a global field (such as a <a class='existingWikiWord' href='/nlab/show/number+field'>number field</a>) <math class='maruku-mathml' display='inline' id='mathml_c8d0c3f251427faf7af99d98b5dfc6e5796b96a2_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math> into its <a class='existingWikiWord' href='/nlab/show/ring+of+adeles'>ring of adeles</a> <math class='maruku-mathml' display='inline' id='mathml_c8d0c3f251427faf7af99d98b5dfc6e5796b96a2_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>A</mi> <mi>k</mi></msub></mrow><annotation encoding='application/x-tex'>A_k</annotation></semantics></math> is a lattice in the more general sense. Recalling that <math class='maruku-mathml' display='inline' id='mathml_c8d0c3f251427faf7af99d98b5dfc6e5796b96a2_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>A</mi> <mi>k</mi></msub></mrow><annotation encoding='application/x-tex'>A_k</annotation></semantics></math> is Pontryagin dual to itself, the lattice <math class='maruku-mathml' display='inline' id='mathml_c8d0c3f251427faf7af99d98b5dfc6e5796b96a2_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math> is identified with its dual lattice.</p>
+<p>The standard diagonal inclusion of a <a class='existingWikiWord' href='/nlab/show/global+field'>global field</a> (such as a <a class='existingWikiWord' href='/nlab/show/number+field'>number field</a>) <math class='maruku-mathml' display='inline' id='mathml_cb7197cb80a73c7d433b3203a913988bfbe1615d_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math> into its <a class='existingWikiWord' href='/nlab/show/ring+of+adeles'>ring of adeles</a> <math class='maruku-mathml' display='inline' id='mathml_cb7197cb80a73c7d433b3203a913988bfbe1615d_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>A</mi> <mi>k</mi></msub></mrow><annotation encoding='application/x-tex'>A_k</annotation></semantics></math> is a lattice in the more general sense. Recalling that <math class='maruku-mathml' display='inline' id='mathml_cb7197cb80a73c7d433b3203a913988bfbe1615d_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>A</mi> <mi>k</mi></msub></mrow><annotation encoding='application/x-tex'>A_k</annotation></semantics></math> is Pontryagin dual to itself in a standard way, the lattice <math class='maruku-mathml' display='inline' id='mathml_cb7197cb80a73c7d433b3203a913988bfbe1615d_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math> is identified with its dual lattice.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -387,22 +388,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 13, 2018 20:02:24 
+  Created on February 13, 2018 20:07:09 
   by <a class="existingWikiWord" href="/nlab/show/Todd+Trimble">Todd Trimble</a>
   (69.112.103.83)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/lattice+%28in+a+vector+space%2C+etc.%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/lattice+%28in+a+vector+space%2C+etc.%29/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/lattice+%28in+a+vector+space%2C+etc.%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/lattice+%28in+a+vector+space%2C+etc.%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/lattice+%28discrete+subgroup%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/lattice+%28in+a+vector+space%2C+etc.%29" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/lattice+%28discrete+subgroup%29" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/lattice+%28in+a+vector+space%2C+etc.%29" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/lattice+%28discrete+subgroup%29" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/lattice+%28in+a+vector+space%2C+etc.%29" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/lattice+%28discrete+subgroup%29" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
