--- a/pages/18995.html
+++ b/pages/18995.html
@@ -312,7 +312,7 @@ margin-left: 0em;
 <li><a href='https://www.ias.edu/scholars/clay-cordova'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_ad04d720e50e2d64a160a5248e4563e79ac9c826_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_9ec4b9b8acefaf0a6a81240b4b8d2e053f296439_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -324,18 +324,18 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/peopl'>peopl</a></div></p>
 </div>
 
 <div class="revisedby">
-  Created on February 14, 2018 02:40:22 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.229.110.1)
+  Revised on February 14, 2018 05:43:40 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (88.111.220.224)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Clay+Cordova" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Clay+Cordova" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Clay+Cordova/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Clay+Cordova" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Clay+Cordova" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
