--- a/pages/18999.html
+++ b/pages/18999.html
@@ -314,17 +314,21 @@ margin-left: 0em;
 <p>Go, otherwise called golang, is a statically typed programming language promoted by Google.</p>
 
 <p>Some pros and cons are listed in simple article <a href='https://www.techworld.com/developers/java-vs-go-which-programming-language-should-i-learn-3672102'>https://www.techworld.com/developers/java-vs-go-which-programming-language-should-i-learn-3672102</a></p>
+
+<ul>
+<li><a href='https://en.wikipedia.org/wiki/Go_%28programming_language%29'> wikipedia </a></li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Created on February 16, 2018 03:33:21 
+  Revised on February 16, 2018 04:21:40 
   by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
   (161.53.28.4)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/go" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/go" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/go/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/go" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/go" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
