--- a/pages/19001.html
+++ b/pages/19001.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      supersymmetry breaking in nLab
+      Matteo Bertolini in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      supersymmetry breaking
+      Matteo Bertolini
   </h1>
 
 
@@ -308,96 +308,36 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>The <a class='existingWikiWord' href='/nlab/show/spontaneously+broken+symmetry'>spontaneous breaking</a> of <a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetry</a>. Key to all <a class='existingWikiWord' href='/nlab/show/phenomenology'>phenomenology</a> with global low energy supersymmetry.</p>
-
-<p>In <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> for instance due to <em><a class='existingWikiWord' href='/nlab/show/gravitino+condensation'>gravitino condensation</a></em>.</p>
-
-<p><span class='newWikiWord'>SupersymmetryBreaking.png<a href='/nlab/files/SupersymmetryBreaking.png'>?</a></span></p>
-
-<p><img src='https://ncatlab.org/nlab/files/SupersymmetryBreaking.png' width='600'/></p>
-
-<blockquote>
-<p>graphics grabbed from <a href='#FayetFerrara77'>Fayet-Ferrara 77, table 1 on p. 286 (38 of 86)</a></p>
-</blockquote>
-
-<h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Starobinsky+model+of+cosmic+inflation'>Starobinsky model of cosmic inflation</a></li>
+    <ul>
+<li><a href='http://people.sissa.it/~bertmat/'>webpage</a></li>
 </ul>
 
-<h2 id='references'>References</h2>
-
-<p>Original articles include</p>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_17bf931f222c40cbdd33d929057bae84bd86f5ff_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li id='Witten81'><a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Dynamical breaking of supersymmetry</em>, Nuclear Physics B Volume 188, Issue 3, 5 October 1981, Pages 513-554 (<a href='https://doi.org/10.1016/0550-3213(81)90006-7'>doi:10.1016/0550-3213(81)90006-7</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/supersymmetry+breaking'>supersymmetry breaking</a></li>
 </ul>
 
-<p>Review includes</p>
-
-<ul>
-<li id='FayetFerrara77'>
-<p><span class='newWikiWord'>Pierre Fayet<a href='/nlab/new/Pierre+Fayet'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/Sergio+Ferrara'>Sergio Ferrara</a>, <em>Supersymmetry</em>, Physics Reports Volume 32, Issue 5, September 1977, Pages 249-334 (<a href='https://doi.org/10.1016/0370-1573(77)90066-7'>doi:10.1016/0370-1573(77)90066-7</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Hans-Peter+Nilles'>Hans-Peter Nilles</a>, <em>Supersymmetry, supergravity and particle physics</em>, Physics Reports Volume 110, Issues 1–2, August 1984, Pages 1-162 (<a href='https://doi.org/10.1016/0370-1573(84)90008-5'>doi:10.1016/0370-1573(84)90008-5</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Hans-Peter+Nilles'>Hans-Peter Nilles</a>, <em>Hidden Sector Supergravity Breakdown</em>, Nucl. Phys. Proc. Suppl. 101 (2001) 237-250 (<a href='https://arxiv.org/abs/hep-ph/0106063'>arXiv:hep-ph/0106063</a>)</p>
-</li>
-
-<li>
-<p>Yael Shadmi, <em>Supersymmetry breaking</em> (<a href='http://arxiv.org/abs/hep-th/0601076'>arXiv:hep-th/0601076</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Matteo+Bertolini'>Matteo Bertolini</a>, <em>Supersymmetry breaking</em> (<a href='http://people.sissa.it/~bertmat/lect7.pdf'>pdf</a>)</p>
-</li>
-</ul>
-
-<p>A quantitative analysis showing that locally supersymmetric <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> theories will generically not exhibit global spacetime supersymmetry is</p>
-
-<ul>
-<li id='DLSW'><a class='existingWikiWord' href='/nlab/show/Keith+Dienes'>Keith Dienes</a>, Michael Lennek, David Sénéchal, Vaibhav Wasnik, <em>Is SUSY Natural?</em> NewJ.Phys.10:085003,2008 (<a href='http://arxiv.org/abs/0804.4718'>arXiv:0804.4718</a>)</li>
-</ul>
-
-<p>Discussion of supersymmetry breaking unified with <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>cosmic inflation</a> via <a class='existingWikiWord' href='/nlab/show/higher+curvature+correction'>higher curvature corrections</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> – in the <a class='existingWikiWord' href='/nlab/show/Starobinsky+model+of+cosmic+inflation'>Starobinsky model of cosmic inflation</a> – includes</p>
-
-<ul>
-<li id='FerrarKehagias14'>
-<p>Sergio Ferrara, Alex Kehagias, <em>Higher Curvature Supergravity, Supersymmetry Breaking and Inflation</em> (<a href='http://arxiv.org/abs/1407.5187'>arXiv:1407.5187</a>)</p>
-</li>
-
-<li id='DFKRU14'>
-<p>I. Dalianis, F. Farakos, A. Kehagias, A. Riotto, R. von Unge, <em>Supersymmetry Breaking and Inflation from Higher Curvature Supergravity</em> (<a href='http://arxiv.org/abs/1409.8299'>arXiv:1409.8299</a>)</p>
-</li>
-</ul>
+<p>catgeory: people</p>
 </div>
 
 <div class="revisedby">
-  Revised on February 17, 2018 06:59:42 
+  Created on February 17, 2018 06:14:44 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/supersymmetry+breaking" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/supersymmetry+breaking/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/supersymmetry+breaking" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/supersymmetry+breaking" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Matteo+Bertolini" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/supersymmetry+breaking" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Matteo+Bertolini" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/supersymmetry+breaking" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Matteo+Bertolini" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/supersymmetry+breaking" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Matteo+Bertolini" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
