--- a/pages/2356.html
+++ b/pages/2356.html
@@ -481,7 +481,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/etale+geometric+morphism'>étale geometric morphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+geometric+morphism'>étale geometric morphism</a></p>
 </li>
 
 <li>
@@ -798,16 +798,14 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>For a <a class='existingWikiWord' href='/nlab/show/ringed+topos'>ringed topos</a> <math class='maruku-mathml' display='inline' id='mathml_1b50552766cf4d9e66241075d5ae91bc0cac3e92_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>𝒳</mi><mo>,</mo><mi>𝒪</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\mathcal{X}, \mathcal{O})</annotation></semantics></math> the ring object <math class='maruku-mathml' display='inline' id='mathml_1b50552766cf4d9e66241075d5ae91bc0cac3e92_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒪</mi><mo>∈</mo><mi>𝒳</mi></mrow><annotation encoding='application/x-tex'>\mathcal{O} \in \mathcal{X}</annotation></semantics></math> is called the <strong>structure sheaf</strong>.</p>
+<p>For a <a class='existingWikiWord' href='/nlab/show/ringed+topos'>ringed topos</a> <math class='maruku-mathml' display='inline' id='mathml_0aae9479ecb91c9462db7cf31f96f48eb26d1320_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>𝒳</mi><mo>,</mo><mi>𝒪</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\mathcal{X}, \mathcal{O})</annotation></semantics></math> the ring object <math class='maruku-mathml' display='inline' id='mathml_0aae9479ecb91c9462db7cf31f96f48eb26d1320_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒪</mi><mo>∈</mo><mi>𝒳</mi></mrow><annotation encoding='application/x-tex'>\mathcal{O} \in \mathcal{X}</annotation></semantics></math> is called the <strong>structure sheaf</strong>.</p>
 
-<p>More generally, for <math class='maruku-mathml' display='inline' id='mathml_1b50552766cf4d9e66241075d5ae91bc0cac3e92_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>\mathcal{G}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/geometry+%28for+structured+%28infinity%2C1%29-toposes%29'>geometry (for structured (∞,1)-toposes)</a>, a <a class='existingWikiWord' href='/nlab/show/structured+%28infinity%2C1%29-topos'>structured (∞,1)-topos</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_1b50552766cf4d9e66241075d5ae91bc0cac3e92_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒪</mi><mo>:</mo><mi>𝒢</mi><mo>→</mo><mi>𝒳</mi></mrow><annotation encoding='application/x-tex'>
+<p>More generally, for <math class='maruku-mathml' display='inline' id='mathml_0aae9479ecb91c9462db7cf31f96f48eb26d1320_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>\mathcal{G}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/geometry+%28for+structured+%28infinity%2C1%29-toposes%29'>geometry (for structured (∞,1)-toposes)</a>, a <a class='existingWikiWord' href='/nlab/show/structured+%28infinity%2C1%29-topos'>structured (∞,1)-topos</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0aae9479ecb91c9462db7cf31f96f48eb26d1320_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒪</mi><mo>:</mo><mi>𝒢</mi><mo>→</mo><mi>𝒳</mi></mrow><annotation encoding='application/x-tex'>
   \mathcal{O} : \mathcal{G} \to \mathcal{X}
 
 </annotation></semantics></math></div>
-<p>is an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a> equipped with a <math class='maruku-mathml' display='inline' id='mathml_1b50552766cf4d9e66241075d5ae91bc0cac3e92_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>\mathcal{G}</annotation></semantics></math>-valued <strong>structure sheaf</strong> presented by the finite-limits-preserving and cover-preserving <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-functor'>(∞,1)-functor</a> <math class='maruku-mathml' display='inline' id='mathml_1b50552766cf4d9e66241075d5ae91bc0cac3e92_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒪</mi></mrow><annotation encoding='application/x-tex'>\mathcal{O}</annotation></semantics></math>.</p>
-
-<p>In particular for <math class='maruku-mathml' display='inline' id='mathml_1b50552766cf4d9e66241075d5ae91bc0cac3e92_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>H</mi></mstyle> <mi>th</mi></msub></mrow><annotation encoding='application/x-tex'>\mathbf{H}_{th}</annotation></semantics></math> an</p>
+<p>is an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a> equipped with a <math class='maruku-mathml' display='inline' id='mathml_0aae9479ecb91c9462db7cf31f96f48eb26d1320_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>\mathcal{G}</annotation></semantics></math>-valued <strong>structure sheaf</strong> presented by the finite-limits-preserving and cover-preserving <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-functor'>(∞,1)-functor</a> <math class='maruku-mathml' display='inline' id='mathml_0aae9479ecb91c9462db7cf31f96f48eb26d1320_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒪</mi></mrow><annotation encoding='application/x-tex'>\mathcal{O}</annotation></semantics></math>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -838,14 +836,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on July  3, 2014 06:15:58 
+  Revised on February 19, 2018 23:15:10 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (92.68.97.89)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/structure+sheaf" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/structure+sheaf/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/structure+sheaf" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/structure+sheaf" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/structure+sheaf" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/structure+sheaf/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/structure+sheaf" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/structure+sheaf" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
