--- a/pages/19005.html
+++ b/pages/19005.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1034,14 +1034,16 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>For <a class='existingWikiWord' href='/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory'>N=2 D=4 super Yang-Mills theory</a> the <a class='existingWikiWord' href='/nlab/show/moduli+space'>moduli space</a> of <a class='existingWikiWord' href='/nlab/show/vacuum+expectation+value'>vacuum expectation values</a> (VEVs) of the theory is locally a <a class='existingWikiWord' href='/nlab/show/cartesian+product'>Cartesian product</a> between the space of <a class='existingWikiWord' href='/nlab/show/moduli'>moduli</a> of the <a class='existingWikiWord' href='/nlab/show/super+multiplet'>vector multiplet</a> and those of the <a class='existingWikiWord' href='/nlab/show/super+multiplet'>hypermultiplet</a>. The former is called the <a class='existingWikiWord' href='/nlab/show/Coulomb+branch'>Coulomb branch</a>, and the latter the <strong>Higgs branch</strong>.</p>
+<p>For <a class='existingWikiWord' href='/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory'>N=2 D=4 super Yang-Mills theory</a> the <a class='existingWikiWord' href='/nlab/show/moduli+space'>moduli space</a> of <a class='existingWikiWord' href='/nlab/show/vacuum+expectation+value'>vacuum expectation values</a> (VEVs) of the theory is locally a <a class='existingWikiWord' href='/nlab/show/cartesian+product'>Cartesian product</a> between the space of <a class='existingWikiWord' href='/nlab/show/moduli'>moduli</a> of the <a class='existingWikiWord' href='/nlab/show/super+multiplet'>vector multiplet</a> (the <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge field</a> sector) and those of the <a class='existingWikiWord' href='/nlab/show/super+multiplet'>hypermultiplet</a> (the matter field sector). The former is called the <a class='existingWikiWord' href='/nlab/show/Coulomb+branch'>Coulomb branch</a>, and the latter the <em>Higgs branch. These are <a class='existingWikiWord' href='/nlab/show/duality+in+physics'>dual</a> to each other to it under a version of <a class='existingWikiWord' href='/nlab/show/mirror+symmetry'>mirror symmetry</a> .</em></p>
+
+<p>This is the topic of <a class='existingWikiWord' href='/nlab/show/Seiberg-Witten+theory'>Seiberg-Witten theory</a>.</p>
 
 <h2 id='references'>References</h2>
 
 <p>The terminology “Coulomb branch” and “Higgs branch” first appears in</p>
 
 <ul>
-<li id='SeibergWitten94'><a class='existingWikiWord' href='/nlab/show/Nathan+Seiberg'>Nathan Seiberg</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Monopoles, Duality and Chiral Symmetry Breaking in <math class='maruku-mathml' display='inline' id='mathml_0fa13f84bbf8e4de639ae72ba1d7ad206ee5b218_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> Supersymmetric QCD</em> (<a href='http://arxiv.org/abs/hep-th/9408099'>arXiv:hep-th/9408099</a>)</li>
+<li id='SeibergWitten94'><a class='existingWikiWord' href='/nlab/show/Nathan+Seiberg'>Nathan Seiberg</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Monopoles, Duality and Chiral Symmetry Breaking in <math class='maruku-mathml' display='inline' id='mathml_d1ab5dc3c82234c61030b7c9481d399ec7477e64_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> Supersymmetric QCD</em> (<a href='http://arxiv.org/abs/hep-th/9408099'>arXiv:hep-th/9408099</a>)</li>
 </ul>
 
 <p>
@@ -1049,14 +1051,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 19, 2018 12:44:14 
+  Revised on February 19, 2018 23:31:38 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Higgs+branch" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Higgs+branch/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Higgs+branch" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Higgs+branch" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Higgs+branch" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Higgs+branch/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Higgs+branch" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Higgs+branch" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
