--- a/pages/19006.html
+++ b/pages/19006.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -809,7 +809,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_ae337888512e53ccddbca9a8716ba253f847ec70_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_715f67e0d9b1af3e6bd619c3a4007653d0992002_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> generally all <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a> are subject to <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a> choices that may change their value from that computed in <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a>. But if <a class='existingWikiWord' href='/nlab/show/renormalization+condition'>renormalization conditions</a> are imposed, these generally reduce the space of renormalization choices. If a choice of <a class='existingWikiWord' href='/nlab/show/renormalization+condition'>renormalization condition</a> completely removes the renormalization freedom in an observable, one says that it <em>protects</em> the observable from <em>receiving quantum corrections</em>.</p>
@@ -818,11 +818,11 @@ margin-left: 0em;
 
 <h2 id='examples'>Examples</h2>
 
-<p>Famous examples of protected quantities are <a class='existingWikiWord' href='/nlab/show/mass'>masses</a> and <a class='existingWikiWord' href='/nlab/show/charge'>charges</a> of <a class='existingWikiWord' href='/nlab/show/BPS+state'>BPS-states</a>, which are protected, in this way, by <a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetry</a>. The reason why supersymmetric field theory admits more interesting computations than are possible otherwise is that the protection of BPS states allows to compute many quantum observables that would otherwise not be computatble.</p>
+<p>Famous examples of protected quantities are <a class='existingWikiWord' href='/nlab/show/mass'>masses</a> and <a class='existingWikiWord' href='/nlab/show/charge'>charges</a> of <a class='existingWikiWord' href='/nlab/show/BPS+state'>BPS-states</a>, which are protected, in this way, by <a class='existingWikiWord' href='/nlab/show/supersymmetry'>supersymmetry</a>. The reason why supersymmetric field theory admits more interesting computations than are possible otherwise is that the protection of BPS states allows to compute many <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a> that would otherwise not be computatble in practice.</p>
 
 <p>This is for instance the reason why so much is known about the <a class='existingWikiWord' href='/nlab/show/Bekenstein-Hawking+entropy'>Bekenstein-Hawking entropy</a> of extremal (hence <a class='existingWikiWord' href='/nlab/show/BPS+state'>BPS</a>) <a class='existingWikiWord' href='/nlab/show/black+hole'>black holes</a> (see at <em><a class='existingWikiWord' href='/nlab/show/black+holes+in+string+theory'>black holes in string theory</a></em>) while comparatively little is known about the quantum properties of non-BPS and hence “non-protected” black holes.</p>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_ae337888512e53ccddbca9a8716ba253f847ec70_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_715f67e0d9b1af3e6bd619c3a4007653d0992002_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -843,7 +843,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on February 20, 2018 00:41:32 
+  Created on February 20, 2018 01:10:23 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
